chore: remove unused `.env_pi` configuration file

--- a/.env
+++ b/.env
@@ -62,8 +62,8 @@ FREE=on
 HTTP_PROXY=on
 HTTP_PROXY_LISTENING_ADDRESS=:3128
 # This password being open doesn't matter as the port is exposed only inside the docker subnet
-# HTTP_PROXY_USER=proton
-# HTTP_PROXY_PASSWORD=n436b5CXcPkrRbKADE1VUhq
+HTTP_PROXY_USER=proton
+HTTP_PROXY_PASSWORD=n436b5CXcPkrRbKADE1VUhq
 HTTP_PROXY_STEALTH=on
 
 # OPENVPN
