--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   },
   "homepage": "https://github.com/sagniKdas53/yt-diff#readme",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "bootstrap": "^5.2.3",
     "cli-color": "^2.0.3",
     "cron": "^2.3.0",
     "generate-password": "^1.7.1",
     "he": "^1.2.0",
-    "jsonwebtoken": "^9.0.2",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
