build: Update Docker build to use Alpine image, remove Deno cache step, and adjust logging levels.

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
 NATIVE_HTTPS_SUPPORT=false
-LOG_LEVELS=trace
+LOG_LEVELS=debug
 NO_COLOR=true
 # Cookies file for yt-dlp, if you don't need it, leave it blank
 # Using a relative path is okay, but an absolute path works best
