--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,12 +48,12 @@ services:
       retries: 5
 
   yt-diff:
-    image: ghcr.io/sagnikdas53/yt-diff:master
+    image: ghcr.io/sagnikdas53/yt-diff:alpine
     container_name: yt-diff
     restart: unless-stopped
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.alpine
       args:
         # This is used to build the frontend in the docker image
         - VITE_BASE_PATH=${BASE_URL}
