--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,16 @@
 {
     "nodeModulesDir": "auto",
+    "imports": {
+        "sequelize": "npm:sequelize@^6.31.1",
+        "cli-color": "npm:cli-color@^2.0.3",
+        "cron": "npm:cron@^2.3.0",
+        "bcryptjs": "npm:bcryptjs@^3.0.3",
+        "jsonwebtoken": "npm:jsonwebtoken@^9.0.2",
+        "he": "npm:he@^1.2.0",
+        "pg": "npm:pg@^8.10.0",
+        "ioredis": "npm:ioredis@^5.3.2",
+        "socket.io": "npm:socket.io@^4.8.1"
+    },
     "tasks": {
         "dev": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff deno run --allow-all --watch index.ts",
         "cookies": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff COOKIES_FILE=cookie_secret.txt deno run --allow-all --watch index.ts",
