fix: update environment variables for consistency and add new parameters to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,9 @@ services:
       - MAX_FILENAME_LENGTH=${MAX_FILENAME_LENGTH}
       - COOKIES_FILE=${CONTAINER_COOKIES_FILE}
       - MAX_USERS=${MAX_USERS}
+      - MAX_DOWNLOADS=${MAX_DOWNLOADS}
+      - CLEANUP_INTERVAL=${CLEANUP_INTERVAL}
+      - PROCESS_MAX_AGE=${PROCESS_MAX_AGE}
       # Update configuration
       - TZ_PREFERRED=${TZ_PREFERRED}
       - UPDATE_SCHEDULED=${UPDATE_SCHEDULED}
