--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 DB_USERNAME=ytdiff
 DB_NAME=vidlist
 DB_HOST=yt-db
-DB_LOCATION=/home/sagnik/Documents/yt-data-new/
+DB_LOCATION=/home/pi5/Documents/yt-data-new/
 UID=1000
 GID=1000
 
@@ -13,7 +13,7 @@ PG_ADMIN_PASSWORD=2OPmJgXSdXjO2y7vn91yow7Z
 
 # YT-DIFF options
 PROTOCOL=https
-HOSTNAME=ideapad.tail9ece4.ts.net
+HOSTNAME=pi5.tail9ece4.ts.net
 PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
@@ -23,14 +23,14 @@ NO_COLOR=true
 # Cookies file for yt-dlp, if you don't need it, leave it blank
 # Using a relative path is okay, but an absolute path works best
 CONTAINER_COOKIES_FILE=/home/ytdiff/cookies.txt
-HOST_COOKIES_FILE=/home/sagnik/Projects/docker-composes/yt-diff/cookie_secret.txt
+HOST_COOKIES_FILE=/home/pi5/Documents/docker-composes/yt-diff/cookie_secret.txt
 # Max users allowed to sign up, default is 15
 MAX_USERS=1
 
 # Using a relative path is okay, but a absolute path works best
 CONTAINER_SAVE_PATH=/home/ytdiff/Videos/yt-dlp/
-HOST_SAVE_PATH=/home/sagnik/Documents/syncthing/pi5/yt-dlp/
-BACKUP_LOCATION=/home/sagnik/MEGAsync/Databases/yt-db/
+HOST_SAVE_PATH=/mnt/nvme/stuff/yt-diff/
+BACKUP_LOCATION=/mnt/nvme/stuff/misc/yt-db/
 # 0 works but don't use it, please
 SLEEP=3
 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
@@ -47,9 +47,9 @@ SAVE_THUMBNAIL=true
 RESTRICT_FILENAMES=true
 # 255 is the max filename length for ext4 filesystems, but leaving some buffer
 MAX_FILENAME_LENGTH=240
-# Proxy String, make sure there is no space or ! and only 1 @ in the string
-PROXY_STRING=http://proton:n436b5CXcPkrRbKADE1VUhq@gluetun:3128
-# Socks5 eg. - socks5://socks_user:socks_pass@proxy_ip:proxy_port
+MAX_DOWNLOADS=1
+CLEANUP_INTERVAL=*/30 * * * *
+PROCESS_MAX_AGE=1800000
 
 # CRON expression used here, use https://crontab.guru/ for examples
 UPDATE_SCHEDULED=0 */12 * * *
@@ -65,6 +65,7 @@ HTTP_PROXY_LISTENING_ADDRESS=:3128
 HTTP_PROXY_USER=proton
 HTTP_PROXY_PASSWORD=n436b5CXcPkrRbKADE1VUhq
 HTTP_PROXY_STEALTH=on
+PROXY_STRING=http://proton:n436b5CXcPkrRbKADE1VUhq@gluetun:3128/
 
 # OPENVPN
 #JAPAN
